# cuda-gemm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: kernel.cuh
include/utils/: generate_matrix.cuh
src/kernels/: README.md  cublas.cu
src/kernels/00_dot_product/: README.md
src/kernels/01_shared_memory/: README.md  kernel.cu
src/kernels/02_register_tiling/: README.md
src/kernels/03_memory_optimizations/: README.md  kernel.cu
src/kernels/03_vectorized_dram/: README.md  kernel.cu
src/kernels/cublas/: README.md  cublas.cu  cublas.md
src/kernels/naive/: README.md  naive.cu  naive.md  profile.md
src/kernels/register/: README.md  register.cu
src/kernels/tiled/: README.md  tiled.cu
src/kernels/vectorized/: vectorized.cu
src/utils/: generate_matrix.cu
tests/: benchmark.cu  profile.cu  validate.cu
